testsuite/tests/typecheck/should_fail/tcfail131.stderr

tcfail131.hs:7:11: error:
    Couldn't match expected type ‘Integer’ with actual type ‘b’
    ‘b’ is a rigid type variable bound by
        the type signature for: g :: Num b => b -> b at tcfail131.hs:6:8
    Relevant bindings include
      x :: b (bound at tcfail131.hs:7:5)
      g :: b -> b (bound at tcfail131.hs:7:3)
    In the first argument of ‘f’, namely ‘x’
    In the expression: f x x
    In an equation for ‘g’: g x = f x x
